--- a/src/app/dashboard/navbar/navbar.component.scss
+++ b/src/app/dashboard/navbar/navbar.component.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,500&display=swap');
 
 .navbar{
-  background-color: #FFCC00;
   width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #FFCC00;
 
   &__container{
     width: 100%;
