--- a/src/app/dashboard/content/cards/cards.component.html
+++ b/src/app/dashboard/content/cards/cards.component.html
@@ -1,8 +1,21 @@
-<div class="card" style="width: 100%; height: 100%;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+
+  <div class="d-flex align-items-center card text-center" style="width: 100%; height: 100%;">
+    <h4>#{{this.pokemon?.id}}</h4>
+    <img class="card-img-top img-fluid card__img" [src]="this.pokemon?.sprites.other.home.front_default" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h3 class="card-title">{{this.pokemon?.name}}</h3>
+      <div class="card__exp">
+        <p class="card-text">Base Experince: {{this.pokemon?.base_experience}}
+        </p>
+        <div class="progress card__exp_progress">
+          <div class="progress-bar card__exp__progress_value" role="progressbar"
+          aria-valuemin="0" aria-valuemax="100" [style]="this.exp">
+          </div>
+        </div>
+      </div>
+      <div class="d-flex card__type justify-content-around" *ngIf="this.pokemon">
+        <button *ngFor="let types of this.pokemon.types; let i = index" [ngClass]="loadClass(types.type.name)" class="card__type__button btn btn-primary">{{types.type.name}}</button>
+      </div>
+      <a href="#" class="stretched-link"></a>
     </div>
   </div>
