--- a/src/app/dashboard/content/content.component.html
+++ b/src/app/dashboard/content/content.component.html
@@ -1,7 +1,7 @@
 <div class="containers">
     <div class="card-container row justify-content-around">
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-            <app-cards></app-cards>
+        <div class="cards col-lg-3 col-md-4 col-sm-6" *ngFor="let pokemon of this.pokemonRange">
+            <app-cards class="app-cards" [name]="this.pokemon?.name"></app-cards>
         </div>
     </div>
 </div>
