--- a/src/app/dashboard/content/content.component.scss
+++ b/src/app/dashboard/content/content.component.scss
@@ -2,22 +2,27 @@
     position: fixed;
     left: 0;
     bottom: 0;
+    z-index: 0;
     width: 100%;
     background-color: #FFCC00;
     color: white;
 }
 
 .containers{
-    position: absolute;
-    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 60px;
 }
 
-@media (max-width: 992){
-    .nav-button{
-        background-color: aqua;
+.cards{
+    margin: 10px;
+    width: 320px;
+}
+
+@media (max-width: 991px) {
+    .containers {
+      margin-top: 210px; /* Allow the fixed div to grow/shrink in height */
     }
 }
-
 
 .nav-button{
     margin: 5px 5px 5px 5px;
@@ -27,4 +32,9 @@
 .card-container{
     padding-left: 0;
     margin: 0;
+}
+
+.app-cards{
+    width: 100%;
+    height: 100%;
 }
