--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg">
         <div class="navbar__container container-fluid flex-lg-row flex-column justify-content-between justify-content-center align-items-center flex-grow-1">
 
-            <!-- Brand Logo on the left -->
             <div class="navbar-brand navbar__brand">
                 <a href="#">
                     <img src="../../../assets/pokemon-logo.png" alt="Logo" class="navbar-logo navbar__brand__logo">
@@ -9,9 +8,8 @@
             </div>
 
 
-            <!-- Centered Search Form and Submit Button -->
             <div class="navbar__search">
-                <form class="d-flex justify-content-center ">
+                <form class="d-flex justify-content-center">
                         <input class="form-control navbar__search__input me-2" type="search" list="list-pokemon" [(ngModel)]="searchQuery" (input)="onSearchInput($event)" name="search" placeholder="Search" aria-label="Search">
                         <datalist id="list-pokemon">
                             <option *ngFor="let pokemon of suggestion">{{pokemon}}</option>
@@ -20,12 +18,13 @@
                 </form>
             </div>
 
-            <!-- Filters Dropdown on the right -->
-            <div class="navbar__filters">
-                <button class="btn navbar__filters__button btn-dark dropdown-toggle" type="button" id="filtersDropdown"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Filters
+            <div class="navbar__filters btn-group">
+                <button class="btn navbar__filters__button btn-dark dropdown-toggle" data-boundary="viewport" data-bs-toggle="dropdown" type="button" id="filtersDropdown">
+                    {{this.selectedType}}
                 </button>
+                <div class="dropdown-menu">
+                    <button class="dropdown-item" [ngClass]="loadClass(type)" *ngFor="let type of this.typeNames" (click)="typeClick(type)" type="button">{{type}}</button>
+                  </div>
             </div>
         </div>
 </nav>
