--- a/src/app/dashboard/content/cards/cards.component.html
+++ b/src/app/dashboard/content/cards/cards.component.html
@@ -1,7 +1,7 @@
 
   <div class="d-flex align-items-center card text-center" style="width: 100%; height: 100%;">
     <h4>#{{this.pokemon?.id}}</h4>
-    <img class="card-img-top img-fluid card__img" [src]="this.pokemon?.sprites.other.home.front_default" alt="Card image cap">
+    <img class="card-img-top img-fluid card__img" [src]="this.pokemon?.sprites.other.home.front_default || this.pokemon?.sprites.other['official-artwork'].front_default" alt="Card image cap">
     <div class="card-body">
       <h3 class="card-title">{{this.pokemon?.name}}</h3>
       <div class="card__exp">
