--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
-<app-navbar></app-navbar>
+<app-navbar (valueChanged)="updateComponent($event)"></app-navbar>
 <app-content class="content"></app-content>
