--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                         <datalist id="list-pokemon">
                             <option *ngFor="let pokemon of suggestion">{{pokemon}}</option>
                         </datalist>
-                    <button class="btn btn-outline-dark navbar__search__button" type="submit">Search</button>
+                    <button class="btn btn-outline-dark navbar__search__button" (click)="searchEnter()" type="submit">Search</button>
                 </form>
             </div>
 
