added pipes and created component for content details page

--- a/src/app/dashboard/content/cards/cards.component.html
+++ b/src/app/dashboard/content/cards/cards.component.html
@@ -3,7 +3,7 @@
     <h4>#{{this.pokemon?.id}}</h4>
     <img class="card-img-top img-fluid card__img" [src]="this.pokemon?.sprites.other.home.front_default || this.pokemon?.sprites.other['official-artwork'].front_default" alt="Card image cap">
     <div class="card-body">
-      <h3 class="card-title">{{this.pokemon?.name}}</h3>
+      <h3 class="card-title">{{this.pokemon?.name | capitalize}}</h3>
       <div class="card__exp">
         <p class="card-text">Base Experince: {{this.pokemon?.base_experience}}
         </p>
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="d-flex card__type justify-content-around" *ngIf="this.pokemon">
-        <button *ngFor="let types of this.pokemon.types; let i = index" [ngClass]="loadClass(types.type.name)" class="card__type__button btn btn-primary">{{types.type.name}}</button>
+        <button *ngFor="let types of this.pokemon.types; let i = index" [ngClass]="loadClass(types.type.name)" class="card__type__button btn btn-primary">{{types.type.name | capitalize}}</button>
       </div>
     </div>
   </div>
