--- a/src/app/dashboard/content/cards/cards.component.html
+++ b/src/app/dashboard/content/cards/cards.component.html
@@ -1,14 +1,14 @@
 
-  <div class="d-flex align-items-center card text-center" style="width: 100%; height: 100%;">
+  <div class="d-flex align-items-center card text-center" (click)="onClickCard(this.pokemon?.name)" style="width: 100%; height: 100%;">
     <h4>#{{this.pokemon?.id}}</h4>
     <img class="card-img-top img-fluid card__img" [src]="this.pokemon?.sprites.other.home.front_default || this.pokemon?.sprites.other['official-artwork'].front_default" alt="Card image cap">
     <div class="card-body">
       <h3 class="card-title">{{this.pokemon?.name | capitalize}}</h3>
       <div class="card__exp">
-        <p class="card-text">Base Experince: {{this.pokemon?.base_experience}}
+        <p class="card-text">Base Experince: {{this.pokemon?.base_experience}} xp
         </p>
-        <div class="progress card__exp_progress">
-          <div class="progress-bar card__exp__progress_value" role="progressbar"
+        <div class="progress">
+          <div class="progress-bar" role="progressbar"
           aria-valuemin="0" aria-valuemax="100" [style]="this.exp">
           </div>
         </div>
