bug fixes in details-page component

--- a/src/app/dashboard/content/cards/cards.component.scss
+++ b/src/app/dashboard/content/cards/cards.component.scss
@@ -90,6 +90,7 @@ border-radius: 20px;
               &__electric {
                 background-color: #FFD700;
                 box-shadow: 0px 0px 6px 2px #FFD7005f;
+                color: black;
               }
               
               &__psychic {
